--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 .modalInner .modalBox .modalWrap a.btnClose {display: inline-block;position: absolute;top: 0;right: 0;width: 50px;height: 50px;text-indent: -9999px;background: url("../images/btn_popclose.png") 0 0 no-repeat;}
 .modalInner .modalBox .modalWrap .modalContent {/*overflow: auto;*/position: relative;width: 100%;height: auto;background: #fff;}
 .modalInner .modalBox .modalWrap .modalContent:after {content: "";display: block;clear: both;}
-
+.modalInner .modalBox .modalWrap a.doneBtn {display: block; overflow: hidden;}/* 마지막 나오는 a 태그 꼭 넣어야함 */
 
 
 
@@ -43,7 +43,7 @@
 		</div>
 	</div>
 </div>
-<!-- // 프로그램 상담 신청 완료 모달 팝업 끝 -->
+<!-- // 계정신청 모달 팝업 끝 -->
 
 
 
