--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="modalDim"></div>
 
 	<div class="modalInner">
-		<div id="modal-new" class="js modalBox">
+		<div id="modal-new" class="modalBox">
 			<div class="modalWrap">
 				<div class="modalContent">
 					<div class="modalTit">
